Default to fast launch of the JVM when using Gradle's bootRun